k3s/mealie/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mealie.homelab.local`)
      kind: Rule
      services:
        - name: mealie
          namespace: mealie
          port: 9000
  tls:
    certResolver: cloudflare
